--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,28 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
+@layer base {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --text: #080d0a;
+    --background: #f2f8f4;
+    --primary: #56aa72;
+    --secondary: #9dd2af;
+    --accent: #79c793;
   }
 }
+html {
+  font-family: "Poppins", sans-serif;
+}
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+p {
+    text-indent: 20px;
+}
+* {
+  margin: 0 auto;
+  /* background:#0f0f0f; */
+  overflow-x: hidden;
+  color: whitesmoke
 }
