--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,14 @@
 
 @import "tailwindcss";
 
+@custom-variant dark (&:where(.dark, .dark *));
+
+@theme {
+  --color-primary: #3b82f6;
+  --color-primary-dark:#0d0d0d
+
+}
+
 
 @layer base {
   :root {
@@ -26,3 +34,4 @@ p {
   overflow-x: hidden;
   color: whitesmoke
 }
+
